...
                  key: const Key('song.speed.toggleMode'),
                  selectedIndex: data.tempoMode == TempoMode.multiplier ? 0 : 1,
                  onChanged: (index) => _onChangeTempoMode(context, index),
                  segments: const [
                    PillSegment(
                      label: '×',
                      key: Key('song.speed.toggleMode.multiplier'),
                      minFontSize: 16,
                      maxFontSize: 22,
                    ),
                    PillSegment(
                      label: 'BPM',
                      key: Key('song.speed.toggleMode.bpm'),
                      minFontSize: 14,
                    ),
                  ],
                ),
                /* const SizedBox(width: 4),
                IconButton(
...
